terraform-ec2-spot-request/security.tf
resource "aws_security_group" "allow_spot" {
  name        = "allow_spot"
  description = "Allow Web and ssh traffic"
  vpc_id      = var.vpc_id

  ingress {
    description = "HTTP"
    from_port   = 9000
    to_port     = 9000
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    description = "SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }  
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "Spot Instance"
  }
}
